--- a/ci/pipeline-ver7.yml
+++ b/ci/pipeline-ver7.yml
@@ -75,7 +75,12 @@ jobs:
           - -exec
           - |
             dotnet test {{source-code-test-proj-path}} /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
-
+            # dotnet tool install --global dotnet-sonarscanner --version 4.7.1
+            # dotnet-sonarscanner begin /k:"anc-web-api" /d:sonar.host.url="http://localhost:9000" /d:sonar.login="88b2f1a53409ce7cd4bb0f7acf6c95113517853c"
+            # dotnet build
+  - task: code-analysis
+    file: ((source-code-ci-folder))/analyze.yml
+  
 # 4. second job produces a container
 # ==================================
 # Notice that I "get" the source code again. I also set a "passed" attribute meaning this will only run if the unit test step completes successfully. 
