--- a/ci/pipeline-ver7.yml
+++ b/ci/pipeline-ver7.yml
@@ -74,43 +74,41 @@ jobs:
           args:
           - -exec
           - |
-            dotnet test {{source-code-test-proj-path}} /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
-            dotnet tool install --global dotnet-sonarscanner --version 4.7.1
-            apt-get update
-            apt-get -y install openjdk-8-jre
-            export PATH="$PATH:/root/.dotnet/tools"
-            dotnet-sonarscanner begin /k:"anc-web-api" /d:sonar.host.url="http://sonarqube:9000" /d:sonar.login="7f45f03131016687b9095434d0c4af42fdf660f6"
-            #dotnet sonarscanner begin /k:"anc-web-api" /d:sonar.host.url=http://sonarqube:9000 /d:sonar.cs.opencover.reportsPaths="anc-web-api-test\coverage.opencover.xml" /d:sonar.coverage.exclusions="**Tests*.cs"
-            dotnet build ./source-code/anc-web-api.sln
-            dotnet-sonarscanner end /d:sonar.login="7f45f03131016687b9095434d0c4af42fdf660f6"
-
-            #$token = [System.Text.Encoding]::UTF8.GetBytes("7f45f03131016687b9095434d0c4af42fdf660f6" + ":")
-            #$base64 = [System.Convert]::ToBase64String($token)
- 
-            #$basicAuth = [string]::Format("Basic {0}", $base64)
-            #$headers = @{ Authorization = $basicAuth }
-            #$result = Invoke-RestMethod -Method Get -Uri http://sonarqube:9000/api/qualitygates/project_status?projectKey=anc-web-api -Headers $headers
-            #$result | ConvertTo-Json | Write-Host
- 
-            #if ($result.projectStatus.status -eq "OK") {
-            #    Write-Host "Quality Gate Succeeded"
-            #}   else    {
-            #    throw "Quality gate failed"
-            #}
-
-- name: run-code-analysis
-  plan:
-  - get: source-code
-    trigger: true
-    passed:
-    - run-unit-tests
-  - task: code-analysis
-    params:
-      sonar-auth-token: ((sonar-auth-token))
-      sonar-url: ((sonar-url))
-      mongo-connection-string: ((mongo-connection-string))
-    file: ./source-code/ci/codeanalysis.yml 
-
+             dotnet test {{source-code-test-proj-path}} /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
+             apt-get update
+             apt-get -y install jq
+             apt-get -y install openjdk-8-jre
+             
+             dotnet tool install --global dotnet-sonarscanner --version 4.7.1
+             export PATH="$PATH:/root/.dotnet/tools"
+             dotnet-sonarscanner begin /k:"anc-web-api" /d:sonar.host.url="http://sonarqube:9000" /d:sonar.login="7f45f03131016687b9095434d0c4af42fdf660f6"
+             ## dotnet sonarscanner begin /k:"anc-web-api" /d:sonar.host.url=http://sonarqube:9000 /d:sonar.cs.opencover.reportsPaths="anc-web-api-test\coverage.opencover.xml" /d:sonar.coverage.exclusions="**Tests*.cs"
+             dotnet build ./source-code/anc-web-api.sln
+             dotnet-sonarscanner end /d:sonar.login="7f45f03131016687b9095434d0c4af42fdf660f6"
+             
+             analysisComplete=false
+             result=$(curl -X GET --header "Accept: */*" "http://sonarqube:9000/api/qualitygates/project_status?projectKey=anc-web-api" -o qgate.out)
+             eval ${qurlstr}
+             qgjson=`cat qgate.out`
+             qgstatus=`echo $qgjson | jq -r .projectStatus.status`
+             case "$qgstatus" in 
+                     "ERROR")
+                           echo "Quality gate failed";
+                           break;
+                           ;;
+                     "OK")
+                           echo "Quality Gate Succeeded";
+                           analysisComplete=true;
+                           ;;
+                     "*")
+                           echo "Unknown status : $qgstatus";
+                           break;
+                           ;;
+             esac	
+             if [ $analysisComplete == false ]; then
+                 exit 1;
+             fi
+    
 # 4. second job produces a container
 # ==================================
 # Notice that I "get" the source code again. I also set a "passed" attribute meaning this will only run if the unit test step completes successfully. 
